feat(report): nearly complete report generation